# convergio-crate-template

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  deny.toml  release-please-config.json
crates/convergio-CRATE_NAME/: Cargo.toml
crates/convergio-CRATE_NAME/src/: lib.rs  routes.rs
docs/adr/: 001-extraction.md
scripts/: init-repo.sh
