[workspace]
resolver = "2"
members = ["crates/convergio-CRATE_NAME"]

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/Roberdan/convergio-CRATE_NAME"

[workspace.dependencies]
# SDK dependencies
convergio-types = "0.1"
# Uncomment as needed:
# convergio-telemetry = "0.1"
# convergio-security = "0.1"
# convergio-db = "0.1"

# Common deps — pin same versions as SDK for compatibility
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.52", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "fs", "io-util"] }
tracing = "0.1"
axum = { version = "0.7", features = ["ws", "multipart"] }
