[package]
name = "convergio-CRATE_NAME"
description = "CRATE_DESCRIPTION"
version = "0.1.1"
edition.workspace = true
license.workspace = true

[dependencies]
convergio-types = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
